k8sdeploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlw-api
spec:
  selector:
    app: mlw-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
